--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <!-- major.minor.micro.Alpha[n] -->
   <!-- major.minor.micro.Beta[n] -->
   <!-- major.minor.micro.CR[n] -->
-  <!-- major.minor.micro.Final xxx xxx xxx xxx xxx -->
+  <!-- major.minor.micro.Final xxx xxx xxx xxx xxx xxx -->
   <!-- For example: 1.2.3 without the suffix ".Final" corrupts the OSGi eclipse updatesite -->
   <!-- For example: 1.2.3.M2 corrupts the OSGi eclipse updatesite update order -->
   <version>7.43.0-SNAPSHOT</version>
@@ -35,7 +35,7 @@
   <organization>
     <name>JBoss by Red Hat</name>
     <url>http://www.jboss.org/</url>
-  </organization>
+  </organization>GitHub hook trigger for GITScm polling
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
@@ -64,7 +64,7 @@
     <version.commons-configuration>1.6</version.commons-configuration>
     <version.commons-dbcp>1.4</version.commons-dbcp>
     <version.commons-digester>1.8</version.commons-digester>
-    <version.commons-fileupload>1.3.3</version.commons-fileupload>
+    <version.commons-fileupload>1.3.3</version.commons-fileupload>GitHub hook trigger for GITScm polling
     <version.commons-jxpath>1.3</version.commons-jxpath>
     <version.commons-logging>1.1.1</version.commons-logging>
     <version.commons-net>2.2</version.commons-net>
