--- a/pom.xml
+++ b/pom.xml
@@ -287,7 +287,7 @@
     <version.org.testcontainers>1.15.2</version.org.testcontainers>
     <version.org.webjars.swagger-ui>2.2.10</version.org.webjars.swagger-ui>
     <version.org.webjars.npm.monaco-editor>0.20.0</version.org.webjars.npm.monaco-editor>
-    <version.org.wildfly>23.0.1.Final</version.org.wildfly>
+    <version.org.wildfly>23.0.2.Final</version.org.wildfly>
     <version.org.wildfly.arquillian>3.0.1.Final</version.org.wildfly.arquillian>
     <version.org.wildfly.core>15.0.1.Final</version.org.wildfly.core>
     <version.org.wildfly.common>1.5.2.Final</version.org.wildfly.common>
@@ -338,10 +338,10 @@
     <version.org.jboss.arquillian.extension.drone>2.5.1</version.org.jboss.arquillian.extension.drone>
     <version.org.jboss.arquillian.graphene>2.3.2</version.org.jboss.arquillian.graphene>
     <version.com.google.guava.for-selenium>23.0</version.com.google.guava.for-selenium>
-    <version.org.jboss.errai>4.12.0-SNAPSHOT</version.org.jboss.errai>
+    <version.org.jboss.errai>4.12.0.Final</version.org.jboss.errai>
     <version.com.google.elemental2>1.1.0</version.com.google.elemental2>
     <!-- WildFly version used together with  the GWT's Super Dev Mode -->
-    <version.org.jboss.errai.wildfly>23.0.1-SNAPSHOT</version.org.jboss.errai.wildfly>
+    <version.org.jboss.errai.wildfly>23.0.2.Final</version.org.jboss.errai.wildfly>
     <!-- Required by jboss-remoting version above -->
     <version.org.ow2.asm>7.1</version.org.ow2.asm>
     <version.org.wildfly.security>1.10.7.Final</version.org.wildfly.security>
