--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
     <version.javax.mail>1.4.5</version.javax.mail>
     <version.javax.persistence-api>2.2</version.javax.persistence-api>
     <version.javax.xml.bind.jaxb-api>2.3.0</version.javax.xml.bind.jaxb-api>
+    <version.javax.transaction-api>1.3</version.javax.transaction-api>
     <version.jaxen>1.1.6</version.jaxen>
     <version.jivesoftware.smack>3.1.0</version.jivesoftware.smack>
     <version.joda-time>2.9.7</version.joda-time>
@@ -212,29 +213,6 @@
     <version.org.jboss.remote-naming>2.0.5.Final</version.org.jboss.remote-naming>
     <version.org.jboss.remoting>5.0.16.Final</version.org.jboss.remoting>
     <version.org.jboss.shrinkwrap.resolver>2.2.0</version.org.jboss.shrinkwrap.resolver>
-    <version.org.jboss.spec.javax.annotation.jboss-annotations-api_1.2_spec>1.0.0.Final
-    </version.org.jboss.spec.javax.annotation.jboss-annotations-api_1.2_spec>
-    <version.org.jboss.spec.javax.ejb.jboss-ejb-api_3.2_spec>1.0.1.Final
-    </version.org.jboss.spec.javax.ejb.jboss-ejb-api_3.2_spec>
-    <version.org.jboss.spec.javax.el.jboss-el-api_3.0_spec>1.0.12.Final
-    </version.org.jboss.spec.javax.el.jboss-el-api_3.0_spec>
-    <version.org.jboss.spec.javax.enterprise.concurrent>1.0.2.Final
-    </version.org.jboss.spec.javax.enterprise.concurrent>
-    <version.org.jboss.spec.javax.interceptor.jboss-interceptors-api_1.2_spec>1.0.1.Final
-    </version.org.jboss.spec.javax.interceptor.jboss-interceptors-api_1.2_spec>
-    <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.2.Final
-    </version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
-    <version.org.jboss.spec.javax.security.jacc.jboss-jacc-api_1.5_spec>1.0.2.Final
-    </version.org.jboss.spec.javax.security.jacc.jboss-jacc-api_1.5_spec>
-    <version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec>1.0.2.Final
-    </version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec>
-    <version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api_2.3_spec>1.0.3.Final
-    </version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api_2.3_spec>
-    <version.org.jboss.spec.javax.servlet.jstl.jboss-jstl-api_1.2_spec>1.1.3.Final
-    </version.org.jboss.spec.javax.servlet.jstl.jboss-jstl-api_1.2_spec>
-    <version.org.jboss.spec.javax.xml.ws.jboss-jaxws-api_2.3_spec>1.0.0.Final
-    </version.org.jboss.spec.javax.xml.ws.jboss-jaxws-api_2.3_spec>
-    <version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec>1.0.1.Final</version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec>
     <version.org.jboss.weld.weld>3.1.5.SP1</version.org.jboss.weld.weld>
     <version.org.jboss.weld.weld-api>3.1.SP1</version.org.jboss.weld.weld-api>
     <version.org.jboss.xnio>3.7.7.Final</version.org.jboss.xnio>
@@ -247,11 +225,15 @@
     <version.jakarta.resource.jakarta.resource-api.1.7_spec>1.7.4</version.jakarta.resource.jakarta.resource-api.1.7_spec>
     <version.jakarta.security.jacc.jakarta.security.jacc-api_1.6_spec>1.6.1</version.jakarta.security.jacc.jakarta.security.jacc-api_1.6_spec>
     <version.jakarta.servlet.jsp.jakarta.servlet.jsp-api_2.3_spec>2.3.6</version.jakarta.servlet.jsp.jakarta.servlet.jsp-api_2.3_spec>
+    <version.jakarta.servlet.jsp.jstl.jakarta.servlet.jsp.jstl-api>2.0.0</version.jakarta.servlet.jsp.jstl.jakarta.servlet.jsp.jstl-api>
     <version.jakarta.transaction.jakarta.transaction-api_1.3_spec>1.3.3</version.jakarta.transaction.jakarta.transaction-api_1.3_spec>
     <version.jakarta.ws.rs.jakarta.ws.rs-api_2.1_spec>2.1.6</version.jakarta.ws.rs.jakarta.ws.rs-api_2.1_spec>
     <version.jakarta.xml.ws.jakarta.xml.ws-api_2.3_spec>2.3.3</version.jakarta.xml.ws.jakarta.xml.ws-api_2.3_spec>
     <version.jakarta.websocket.jakarta.websocket-api_2.0_spec>2.0.0</version.jakarta.websocket.jakarta.websocket-api_2.0_spec>
     <version.jakarta.persistence.jakarta.persistence-api_spec>2.2.3</version.jakarta.persistence.jakarta.persistence-api_spec>
+    <version.jakarta.servlet-api>4.0.3</version.jakarta.servlet-api>
+    <version.jakarta.xml.bind-api>2.3.3</version.jakarta.xml.bind-api>
+    <version.jakarta.transaction>1.3.3</version.jakarta.transaction>
     <version.org.jdom>1.1.3</version.org.jdom>
     <version.org.jfree.jfreechart>1.5.0</version.org.jfree.jfreechart>
     <version.org.jpmml.model>1.5.1</version.org.jpmml.model> <!-- jpmml-model BSD 3C license - ATTENTION 1.5.1 intentional, because 1.5.1 evaluators works with 1.5.1 -->
@@ -462,12 +444,9 @@
     <revapi.oldKieVersion>7.48.0.Final</revapi.oldKieVersion>
     <revapi.newKieVersion>${project.version}</revapi.newKieVersion>
 
-    <version.org.jboss.spec.javax.websocket>1.1.3.Final</version.org.jboss.spec.javax.websocket>
-
     <version.javax.xml.soap>1.4.0</version.javax.xml.soap>
     <version.javax.jws>1.0-MR1</version.javax.jws>
 
-    <version.org.jboss.spec.javax.ws.rs.jboss-jaxrs-api_2.1_spec>1.0.2.Final</version.org.jboss.spec.javax.ws.rs.jboss-jaxrs-api_2.1_spec>
     <version.org.apache.maven.plugins.dependency>3.0.2</version.org.apache.maven.plugins.dependency>
 
     <version.org.postgresql>42.2.14</version.org.postgresql>
@@ -2026,10 +2005,10 @@
                 <source>${maven.compiler.source}</source>
                 <additionalDependencies>
                   <additionalDependency>
-                    <groupId>org.jboss.spec.javax.transaction</groupId>
-                    <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+                    <groupId>jakarta.transaction</groupId>
+                    <artifactId>jakarta.transaction-api</artifactId>
                     <version>
-                      ${version.org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec}
+                      ${version.jakarta.transaction.jakarta.transaction-api_1.3_spec}
                     </version>
                   </additionalDependency>
                 </additionalDependencies>
@@ -2651,8 +2630,6 @@
         <artifactId>activation</artifactId>
         <version>${version.javax.activation}</version>
       </dependency>
-      <!-- javax.ejb is specified by org.jboss.spec.javax.ejb-->
-      <!-- javax.el is specified by org.jboss.spec.javax.el-->
       <dependency>
         <groupId>javax.inject</groupId>
         <artifactId>javax.inject</artifactId>
@@ -2668,25 +2645,20 @@
         <artifactId>javax.persistence-api</artifactId>
         <version>${version.javax.persistence-api}</version>
       </dependency>
-      <!-- javax.servlet is specified by org.jboss.spec.javax.servlet-->
-      <!-- javax.servlet.jsp is specified by org.jboss.spec.javax.servlet.jsp-->
-      <!-- javax.security.jacc is specified by org.jboss.spec.javax.security.jacc-->
-      <!-- javax.transaction is specified by org.jboss.spec.javax.transaction-->
-      <!-- javax.ws.rs is specified by org.jboss.spec.javax.ws.rs-->
       <dependency>
         <groupId>javax.validation</groupId>
         <artifactId>validation-api</artifactId>
         <version>${version.javax.validation}</version>
       </dependency>
       <dependency>
-        <groupId>org.jboss.spec.javax.xml.bind</groupId>
-        <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec}</version>
-      </dependency>
-      <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>${version.javax.xml.bind.jaxb-api}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.transaction</groupId>
+        <artifactId>javax.transaction-api</artifactId>
+        <version>${version.javax.transaction-api}</version>
       </dependency>
       
       <dependency>
@@ -2735,6 +2707,11 @@
         <version>${version.jakarta.servlet.jsp.jakarta.servlet.jsp-api_2.3_spec}</version>
       </dependency>
       <dependency>
+        <groupId>jakarta.servlet.jsp.jstl</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+        <version>${version.jakarta.servlet.jsp.jstl.jakarta.servlet.jsp.jstl-api}</version>
+      </dependency>
+      <dependency>
         <groupId>jakarta.transaction</groupId>
         <artifactId>jakarta.transaction-api</artifactId>
         <version>${version.jakarta.transaction.jakarta.transaction-api_1.3_spec}</version>
@@ -2758,6 +2735,21 @@
         <groupId>jakarta.persistence</groupId>
         <artifactId>jakarta.persistence-api</artifactId>
         <version>${version.jakarta.persistence.jakarta.persistence-api_spec}</version>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>${version.jakarta.servlet-api}</version>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.xml.bind</groupId>
+        <artifactId>jakarta.xml.bind-api</artifactId>
+        <version>${version.jakarta.xml.bind-api}</version>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.transaction</groupId>
+        <artifactId>jakarta.transaction</artifactId>
+        <version>${version.jakarta.transaction}</version>
       </dependency>
 
       <dependency>
@@ -4127,67 +4119,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.jboss.spec.javax.annotation</groupId>
-        <artifactId>jboss-annotations-api_1.2_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.annotation.jboss-annotations-api_1.2_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.ejb</groupId>
-        <artifactId>jboss-ejb-api_3.2_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.ejb.jboss-ejb-api_3.2_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.enterprise.concurrent</groupId>
-        <artifactId>jboss-concurrency-api_1.0_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.enterprise.concurrent}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.el</groupId>
-        <artifactId>jboss-el-api_3.0_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.el.jboss-el-api_3.0_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.interceptor</groupId>
-        <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.interceptor.jboss-interceptors-api_1.2_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.jms</groupId>
-        <artifactId>jboss-jms-api_2.0_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.security.jacc</groupId>
-        <artifactId>jboss-jacc-api_1.5_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.security.jacc.jboss-jacc-api_1.5_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.servlet</groupId>
-        <artifactId>jboss-servlet-api_3.1_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.servlet.jsp</groupId>
-        <artifactId>jboss-jsp-api_2.3_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api_2.3_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.servlet.jstl</groupId>
-        <artifactId>jboss-jstl-api_1.2_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.servlet.jstl.jboss-jstl-api_1.2_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.ws.rs</groupId>
-        <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.ws.rs.jboss-jaxrs-api_2.1_spec}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.xml.ws</groupId>
-        <artifactId>jboss-jaxws-api_2.3_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.xml.ws.jboss-jaxws-api_2.3_spec}</version>
-      </dependency>
-
-      <dependency>
         <groupId>org.jboss.weld</groupId>
         <artifactId>weld-api</artifactId>
         <version>${version.org.jboss.weld.weld-api}</version>
@@ -4815,13 +4746,6 @@
         <groupId>com.google.gwt.gwtmockito</groupId>
         <artifactId>gwtmockito</artifactId>
         <version>${version.com.google.gwt.gwtmockito}</version>
-        <exclusions>
-          <exclusion>
-            <!-- Collides with 'org.jboss.spec.javax.el:jboss-el-api_3.0_spec' -->
-            <groupId>org.mortbay.jasper</groupId>
-            <artifactId>apache-el</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
 
       <dependency>
@@ -5197,25 +5121,12 @@
         <version>${version.org.hibernate}</version>
         <exclusions>
           <exclusion>
-          <!-- We generally use JBoss Spec JARs. Instead of the Geronimo one use
-              'org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec'. -->
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jta_1.1_spec</artifactId>
+            <groupId>org.jboss.spec.javax.transaction</groupId>
+            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
           </exclusion>
-          <!-- collides with javax.activation:javax.activation-api:jar:1.2.0:compile  -->
           <exclusion>
-            <groupId>jakarta.activation</groupId>
-            <artifactId>jakarta.activation-api</artifactId>
-          </exclusion>
-          <!-- collides with  javax.xml.bind:jaxb-api:jar:2.3.1:compile -->
-          <exclusion>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-          </exclusion>
-          <!-- collides with  org.jboss.spec.javax.xml.bind:jboss-jaxb-api_2.3_spec:jar:1.0.1.Final:compile -->
-          <exclusion>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>org.jboss.spec.javax.xml.bind</groupId>
+            <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -5225,10 +5136,8 @@
         <version>${version.org.hibernate}</version>
         <exclusions>
           <exclusion>
-            <!-- We generally use JBoss Spec JARs. Instead of the Geronimo one use
-                             'org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec'. -->
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jta_1.1_spec</artifactId>
+            <groupId>org.jboss.spec.javax.transaction</groupId>
+            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -5430,12 +5339,6 @@
       </dependency>
 
       <!-- kie server controller over websockets -->
-      <dependency>
-        <groupId>org.jboss.spec.javax.websocket</groupId>
-        <artifactId>jboss-websocket-api_1.1_spec</artifactId>
-        <version>${version.org.jboss.spec.javax.websocket}</version>
-      </dependency>
-
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
