--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,7 @@
     <version.org.jboss.weld.weld>3.1.5.SP1</version.org.jboss.weld.weld>
     <version.org.jboss.weld.weld-api>3.1.SP1</version.org.jboss.weld.weld-api>
     <version.org.jboss.xnio>3.7.7.Final</version.org.jboss.xnio>
+    <version.jakarta.activation.jakarta.activation-api>1.2.2</version.jakarta.activation.jakarta.activation-api>
     <version.jakarta.annotation.jakarta.annotation-api_1.3_spec>1.3.5</version.jakarta.annotation.jakarta.annotation-api_1.3_spec>
     <version.jakarta.ejb.jakarta.ejb-api_3.2_spec>3.2.6</version.jakarta.ejb.jakarta.ejb-api_3.2_spec>
     <version.jakarta.el.jakarta.el-api.3.0_spec>3.0.3</version.jakarta.el.jakarta.el-api.3.0_spec>
@@ -2659,7 +2660,12 @@
         <artifactId>javax.transaction-api</artifactId>
         <version>${version.javax.transaction-api}</version>
       </dependency>
-      
+
+      <dependency>
+        <groupId>jakarta.activation</groupId>
+        <artifactId>jakarta.activation-api</artifactId>
+        <version>${version.jakarta.activation.jakarta.activation-api}</version>
+      </dependency>
       <dependency>
         <groupId>jakarta.annotation</groupId>
         <artifactId>jakarta.annotation-api</artifactId>
