--- a/pom.xml
+++ b/pom.xml
@@ -217,20 +217,20 @@
     <version.org.jboss.weld.weld-api>3.1.SP1</version.org.jboss.weld.weld-api>
     <version.org.jboss.xnio>3.7.7.Final</version.org.jboss.xnio>
     <version.jakarta.activation.jakarta.activation-api>1.2.2</version.jakarta.activation.jakarta.activation-api>
-    <version.jakarta.annotation.jakarta.annotation-api_1.3_spec>1.3.5</version.jakarta.annotation.jakarta.annotation-api_1.3_spec>
-    <version.jakarta.ejb.jakarta.ejb-api_3.2_spec>3.2.6</version.jakarta.ejb.jakarta.ejb-api_3.2_spec>
-    <version.jakarta.el.jakarta.el-api.3.0_spec>3.0.3</version.jakarta.el.jakarta.el-api.3.0_spec>
+    <version.jakarta.annotation.jakarta.annotation-api>1.3.5</version.jakarta.annotation.jakarta.annotation-api>
+    <version.jakarta.ejb.jakarta.ejb-api>3.2.6</version.jakarta.ejb.jakarta.ejb-api>
+    <version.jakarta.el.jakarta.el-api>3.0.3</version.jakarta.el.jakarta.el-api>
     <version.jakarta.enterprise.concurrent.jakarta.enterprise.concurrent-api_spec>1.1.2</version.jakarta.enterprise.concurrent.jakarta.enterprise.concurrent-api_spec>
-    <version.jakarta.interceptor.jakarta.interceptor-api_1.2_spec>1.2.5</version.jakarta.interceptor.jakarta.interceptor-api_1.2_spec>
-    <version.jakarta.jms.jakarta.jms-api.2_2_spec>2.0.3</version.jakarta.jms.jakarta.jms-api.2_2_spec>
-    <version.jakarta.resource.jakarta.resource-api.1.7_spec>1.7.4</version.jakarta.resource.jakarta.resource-api.1.7_spec>
-    <version.jakarta.security.jacc.jakarta.security.jacc-api_1.6_spec>1.6.1</version.jakarta.security.jacc.jakarta.security.jacc-api_1.6_spec>
-    <version.jakarta.servlet.jsp.jakarta.servlet.jsp-api_2.3_spec>2.3.6</version.jakarta.servlet.jsp.jakarta.servlet.jsp-api_2.3_spec>
+    <version.jakarta.interceptor.jakarta.interceptor-api>1.2.5</version.jakarta.interceptor.jakarta.interceptor-api>
+    <version.jakarta.jms.jakarta.jms-api>2.0.3</version.jakarta.jms.jakarta.jms-api>
+    <version.jakarta.resource.jakarta.resource-api>1.7.4</version.jakarta.resource.jakarta.resource-api>
+    <version.jakarta.security.jacc.jakarta.security.jacc-api>1.6.1</version.jakarta.security.jacc.jakarta.security.jacc-api>
+    <version.jakarta.servlet.jsp.jakarta.servlet.jsp-api>2.3.6</version.jakarta.servlet.jsp.jakarta.servlet.jsp-api>
     <version.jakarta.servlet.jsp.jstl.jakarta.servlet.jsp.jstl-api>2.0.0</version.jakarta.servlet.jsp.jstl.jakarta.servlet.jsp.jstl-api>
-    <version.jakarta.transaction.jakarta.transaction-api_1.3_spec>1.3.3</version.jakarta.transaction.jakarta.transaction-api_1.3_spec>
-    <version.jakarta.ws.rs.jakarta.ws.rs-api_2.1_spec>2.1.6</version.jakarta.ws.rs.jakarta.ws.rs-api_2.1_spec>
-    <version.jakarta.xml.ws.jakarta.xml.ws-api_2.3_spec>2.3.3</version.jakarta.xml.ws.jakarta.xml.ws-api_2.3_spec>
-    <version.jakarta.websocket.jakarta.websocket-api_2.0_spec>2.0.0</version.jakarta.websocket.jakarta.websocket-api_2.0_spec>
+    <version.jakarta.transaction.jakarta.transaction-api>1.3.3</version.jakarta.transaction.jakarta.transaction-api>
+    <version.jakarta.ws.rs.jakarta.ws.rs-api>2.1.6</version.jakarta.ws.rs.jakarta.ws.rs-api>
+    <version.jakarta.xml.ws.jakarta.xml.ws-api>2.3.3</version.jakarta.xml.ws.jakarta.xml.ws-api>
+    <version.jakarta.websocket.jakarta.websocket-api>2.0.0</version.jakarta.websocket.jakarta.websocket-api>
     <version.jakarta.persistence.jakarta.persistence-api_spec>2.2.3</version.jakarta.persistence.jakarta.persistence-api_spec>
     <version.jakarta.servlet-api>4.0.3</version.jakarta.servlet-api>
     <version.jakarta.xml.bind-api>2.3.3</version.jakarta.xml.bind-api>
@@ -2008,7 +2008,7 @@
                     <groupId>jakarta.transaction</groupId>
                     <artifactId>jakarta.transaction-api</artifactId>
                     <version>
-                      ${version.jakarta.transaction.jakarta.transaction-api_1.3_spec}
+                      ${version.jakarta.transaction.jakarta.transaction-api}
                     </version>
                   </additionalDependency>
                 </additionalDependencies>
@@ -2669,12 +2669,12 @@
       <dependency>
         <groupId>jakarta.annotation</groupId>
         <artifactId>jakarta.annotation-api</artifactId>
-        <version>${version.jakarta.annotation.jakarta.annotation-api_1.3_spec}</version>
+        <version>${version.jakarta.annotation.jakarta.annotation-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.ejb</groupId>
         <artifactId>jakarta.ejb-api</artifactId>
-        <version>${version.jakarta.ejb.jakarta.ejb-api_3.2_spec}</version>
+        <version>${version.jakarta.ejb.jakarta.ejb-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.enterprise.concurrent</groupId>
@@ -2684,32 +2684,32 @@
       <dependency>
         <groupId>jakarta.el</groupId>
         <artifactId>jakarta.el-api</artifactId>
-        <version>${version.jakarta.el.jakarta.el-api.3.0_spec}</version>
+        <version>${version.jakarta.el.jakarta.el-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.interceptor</groupId>
         <artifactId>jakarta.interceptor-api</artifactId>
-        <version>${version.jakarta.interceptor.jakarta.interceptor-api_1.2_spec}</version>
+        <version>${version.jakarta.interceptor.jakarta.interceptor-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.jms</groupId>
         <artifactId>jakarta.jms-api</artifactId>
-        <version>${version.jakarta.jms.jakarta.jms-api.2_2_spec}</version>
+        <version>${version.jakarta.jms.jakarta.jms-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.resource</groupId>
         <artifactId>jakarta.resource-api</artifactId>
-        <version>${version.jakarta.resource.jakarta.resource-api:1.7_spec}</version>
+        <version>${version.jakarta.resource.jakarta.resource-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.security.jacc</groupId>
         <artifactId>jakarta.security.jacc-api</artifactId>
-        <version>${version.jakarta.security.jacc.jakarta.security.jacc-api_1.6_spec}</version>
+        <version>${version.jakarta.security.jacc.jakarta.security.jacc-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.servlet.jsp</groupId>
         <artifactId>jakarta.servlet.jsp-api</artifactId>
-        <version>${version.jakarta.servlet.jsp.jakarta.servlet.jsp-api_2.3_spec}</version>
+        <version>${version.jakarta.servlet.jsp.jakarta.servlet.jsp-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.servlet.jsp.jstl</groupId>
@@ -2719,22 +2719,22 @@
       <dependency>
         <groupId>jakarta.transaction</groupId>
         <artifactId>jakarta.transaction-api</artifactId>
-        <version>${version.jakarta.transaction.jakarta.transaction-api_1.3_spec}</version>
+        <version>${version.jakarta.transaction.jakarta.transaction-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.ws.rs</groupId>
         <artifactId>jakarta.ws.rs-api</artifactId>
-        <version>${version.jakarta.ws.rs.jakarta.ws.rs-api_2.1_spec}</version>
+        <version>${version.jakarta.ws.rs.jakarta.ws.rs-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.xml.ws</groupId>
         <artifactId>jakarta.xml.ws-api</artifactId>
-        <version>${version.jakarta.xml.ws.jakarta.xml.ws-api_2.3_spec}</version>
+        <version>${version.jakarta.xml.ws.jakarta.xml.ws-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.websocket</groupId>
         <artifactId>jakarta.websocket-api</artifactId>
-        <version>${version.jakarta.websocket.jakarta.websocket-api_2.0_spec}</version>
+        <version>${version.jakarta.websocket.jakarta.websocket-api}</version>
       </dependency>
       <dependency>
         <groupId>jakarta.persistence</groupId>
