--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
     <version.org.dom4j>2.1.3</version.org.dom4j>
     <version.guru.nidi>0.18.0</version.guru.nidi>
     <version.io.springfox>2.9.2</version.io.springfox>
-    <version.io.smallrye.openapi.core>2.0.26</version.io.smallrye.openapi.core>
+    <version.io.smallrye.openapi.core>2.1.4</version.io.smallrye.openapi.core>
     <version.io.strimzi.strimzi-test-container>0.23.0</version.io.strimzi.strimzi-test-container>
     <version.io.takari.maven.plugins.testing>2.9.2</version.io.takari.maven.plugins.testing>
     <version.io.undertow>2.0.28.Final</version.io.undertow>
@@ -185,6 +185,7 @@
     <version.org.eclipse.jdt>3.18.0</version.org.eclipse.jdt>
     <version.org.eclipse.jetty>9.2.14.v20151106</version.org.eclipse.jetty>
     <version.org.eclipse.jgit>5.8.0.202006091008-r</version.org.eclipse.jgit>
+    <version.org.eclipse.microprofile.openapi>2.0</version.org.eclipse.microprofile.openapi>
     <version.org.eclipse.persistence>2.7.6</version.org.eclipse.persistence>
     <version.org.eclipse.sisu>0.3.2</version.org.eclipse.sisu>
     <version.org.eclipse.emf.gwt>2.9.0</version.org.eclipse.emf.gwt>
@@ -3854,6 +3855,12 @@
         <groupId>org.eclipse.sisu</groupId>
         <artifactId>org.eclipse.sisu.plexus</artifactId>
         <version>${version.org.eclipse.sisu}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.eclipse.microprofile.openapi</groupId>
+        <artifactId>microprofile-openapi-api</artifactId>
+        <version>${version.org.eclipse.microprofile.openapi}</version>
       </dependency>
 
       <dependency>
